--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -23,11 +23,15 @@ ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,openai.com
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,auth0.com
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,bing.com
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,live.com
+ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,oaistatic.com
+
 ruleset=✈ Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🎬 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix_Classical.list
 ruleset=🎵 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🎮 hypixel,[]DOMAIN-SUFFIX,hypixel.net
+ruleset=🎮 ubisoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
 ruleset=🚀 节点选择,[]FINAL
+
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
@@ -38,5 +42,6 @@ custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=💾 下载服务`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎮 hypixel`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=🎮 ubisoft`select`[]DIRECT`[]🚀 节点选择`.*
 enable_rule_generator=true
 overwrite_original_rules=true
