--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -9,8 +9,8 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Lo
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
@@ -43,5 +43,6 @@ custom_proxy_group=🎵 Spotify`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=💾 下载服务`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎮 hypixel`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎮 ubisoft`select`[]DIRECT`[]🚀 节点选择`.*
+custom_proxy_group=🥵 广告`select`[]REJECT`[]DIRECT`[]🚀 节点选择`.*
 enable_rule_generator=true
 overwrite_original_rules=true
