--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -14,6 +14,7 @@ ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
+ruleset=DIRECT,[]DOMAIN-SUFFIX,lot-ml.com
 ruleset=💾 下载服务,https://raw.githubusercontent.com/LoveMyself666/ACL4SSR/master/Clash/GameDownload.list
 ruleset=💾 下载服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=💾 下载服务,[]DOMAIN,steamcdn-a.akamaihd.net
