--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -16,9 +16,10 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=DIRECT,[]DOMAIN-SUFFIX,lot-ml.com
 ruleset=💾 下载服务,https://raw.githubusercontent.com/LoveMyself666/ACL4SSR/master/Clash/GameDownload.list
-ruleset=💾 下载服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=💾 下载服务,[]DOMAIN,steamcdn-a.akamaihd.net
 ruleset=💾 下载服务,[]DOMAIN-SUFFIX,steamserver.net
+
+ruleset=💾 torrent,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,openai.com
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,auth0.com
@@ -42,6 +43,7 @@ custom_proxy_group=👶 Bilibili`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=💾 下载服务`select`[]DIRECT`[]🚀 节点选择`.*
+custom_proxy_group=💾 torrent`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎮 hypixel`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎮 ubisoft`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🥵 广告`select`[]REJECT`[]DIRECT`[]🚀 节点选择`.*
