--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -20,6 +20,7 @@ ruleset=💾 下载服务,[]DOMAIN,steamcdn-a.akamaihd.net
 ruleset=💾 下载服务,[]DOMAIN-SUFFIX,steamserver.net
 
 ruleset=💾 torrent,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
+ruleset=💾 torrent,[]DOMAIN-KEYWORD,tracker
 
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,openai.com
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,auth0.com
