--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,13 +2,14 @@
 ;解决DNS泄露，来自不良林 stmtc修改
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=⏰ GoogleCN,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,bilibili.com
 ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,biliapi.net
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=⏰ Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -18,9 +19,9 @@ ruleset=DIRECT,[]DOMAIN-SUFFIX,lot-ml.com
 ruleset=💾 下载服务,https://raw.githubusercontent.com/LoveMyself666/ACL4SSR/master/Clash/GameDownload.list
 ruleset=💾 下载服务,[]DOMAIN,steamcdn-a.akamaihd.net
 ruleset=💾 下载服务,[]DOMAIN-SUFFIX,steamserver.net
-
 ruleset=💾 torrent,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=💾 torrent,[]DOMAIN-KEYWORD,tracker
+
 
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,openai.com
 ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,auth0.com
@@ -33,6 +34,9 @@ ruleset=🎬 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🎵 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🎮 hypixel,[]DOMAIN-SUFFIX,hypixel.net
 ruleset=🎮 ubisoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
+ruleset=🀄 Discord,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
+
+
 ruleset=🚀 节点选择,[]FINAL
 
 
@@ -40,6 +44,8 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🤖 ChatGPT`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=✈ Telegram`select`[]🚀 节点选择`.*`[]DIRECT
+custom_proxy_group=⏰ GoogleCN`select`[]DIRECT`[]🚀 节点选择`.*
+custom_proxy_group=⏰ Google`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=👶 Bilibili`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🚀 节点选择`.*`[]DIRECT
@@ -47,6 +53,7 @@ custom_proxy_group=💾 下载服务`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=💾 torrent`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=🎮 hypixel`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎮 ubisoft`select`[]DIRECT`[]🚀 节点选择`.*
+custom_proxy_group=🀄 Discord`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🥵 广告`select`[]REJECT`[]DIRECT`[]🚀 节点选择`.*
 enable_rule_generator=true
 overwrite_original_rules=true
