--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,3 +1,21 @@
+dns:
+  enable: true
+  ipv6: true
+  default-nameserver:
+    - 223.5.5.5
+    - 8.8.8.8
+    - 1.1.1.1
+  nameserver:
+    - https://1.1.1.1/dns-query
+    - https://1.0.0.1/dns-query
+  proxy-server-nameserver:
+    - https://1.1.1.1/dns-query
+  nameserver-policy:
+    "rule-set:DIRECT":
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+
+
 [custom]
 ;解决DNS泄露，来自不良林 stmtc修改
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
@@ -14,7 +32,10 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=DIRECT,[]DOMAIN-SUFFIX,leigod.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,lot-ml.com
+ruleset=DIRECT,[]GEOSITE,private,DIRECT
+ruleset=DIRECT,[]GEOSITE,CN,DIRECT
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 
 ruleset=💾 下载服务,https://raw.githubusercontent.com/LoveMyself666/ACL4SSR/master/Clash/GameDownload.list
