--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,3 +1,4 @@
+{% if default(request.clash.dns, "") == "1" %}
 dns:
   enable: true
   ipv6: true
@@ -14,7 +15,7 @@ dns:
     "rule-set:DIRECT":
       - https://doh.pub/dns-query
       - https://dns.alidns.com/dns-query
-
+{% endif %}
 
 [custom]
 ;解决DNS泄露，来自不良林 stmtc修改
