--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -62,3 +62,5 @@ custom_proxy_group=🀄 Discord`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🥵 广告`select`[]REJECT`[]DIRECT`[]🚀 节点选择`.*
 enable_rule_generator=true
 overwrite_original_rules=true
+
+clash_rule_base=https://raw.githubusercontent.com/stmtc233/z/main/mb.yml
