--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -22,20 +22,17 @@ ruleset=DIRECT,[]GEOSITE,CN,DIRECT
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 
 ruleset=💾 下载服务,https://raw.githubusercontent.com/LoveMyself666/ACL4SSR/master/Clash/GameDownload.list
+ruleset=💾 下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownloadCN/GameDownloadCN.list
+ruleset=💾 下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownload/GameDownload.list
 ruleset=💾 下载服务,[]DOMAIN,steamcdn-a.akamaihd.net
 ruleset=💾 下载服务,[]DOMAIN-SUFFIX,steamserver.net
 ruleset=💾 torrent,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=💾 torrent,[]DOMAIN-KEYWORD,tracker
 
-
-ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,openai.com
-ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,auth0.com
-ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,bing.com
-ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,live.com
-ruleset=🤖 ChatGPT,[]DOMAIN-SUFFIX,oaistatic.com
+ruleset=🤖 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 
 ruleset=✈ Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=🎬 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+;ruleset=🎬 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎵 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🎮 hypixel,[]DOMAIN-SUFFIX,hypixel.net
 ruleset=🎮 ubisoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
@@ -52,7 +49,7 @@ custom_proxy_group=✈ Telegram`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=⏰ GoogleCN`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=⏰ Google`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=👶 Bilibili`select`[]DIRECT`[]🚀 节点选择`.*
-custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`.*`[]DIRECT
+;custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=🎵 Spotify`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=💾 下载服务`select`[]DIRECT`[]🚀 节点选择`.*
 custom_proxy_group=💾 torrent`select`[]DIRECT`[]🚀 节点选择`.*
