--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -6,6 +6,7 @@ ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=⏰ GoogleCN,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,bilibili.com
 ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,biliapi.net
+ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,biliapi.com
 ruleset=⏰ Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,no-resolve
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
