--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -27,6 +27,7 @@ ruleset=💾 下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=💾 下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownload/GameDownload.list
 ruleset=💾 下载服务,[]DOMAIN,steamcdn-a.akamaihd.net
 ruleset=💾 下载服务,[]DOMAIN-SUFFIX,steamserver.net
+ruleset=💾 下载服务,https://github.com/MetaCubeX/meta-rules-dat/blob/meta/geo/geosite/steam@cn.list
 ruleset=💾 torrent,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=💾 torrent,[]DOMAIN-KEYWORD,tracker
 
