--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,28 +1,16 @@
 
 [custom]
-;解决DNS泄露，来自不良林 stmtc修改
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=⏰ GoogleCN,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,bilibili.com
-ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,biliapi.net
-ruleset=👶 Bilibili,[]DOMAIN-SUFFIX,biliapi.com
-ruleset=⏰ Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,no-resolve
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/cn.list
+ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/cn.list
+ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/steam%40cn.list
 ruleset=DIRECT,[]DOMAIN-SUFFIX,leigod.com
-ruleset=DIRECT,[]DOMAIN-SUFFIX,lot-ml.com
 ruleset=DIRECT,[]GEOSITE,private,DIRECT
 ruleset=DIRECT,[]GEOSITE,CN,DIRECT
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
-
-
 
 
 ruleset=🚀 节点选择,[]FINAL
@@ -30,11 +18,6 @@ ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⏰ GoogleCN`select`[]DIRECT`[]🚀 节点选择`.*
-custom_proxy_group=⏰ Google`select`[]🚀 节点选择`.*`[]DIRECT
-custom_proxy_group=👶 Bilibili`select`[]DIRECT`[]🚀 节点选择`.*
-;custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`.*`[]DIRECT
-
 custom_proxy_group=🥵 广告`select`[]REJECT`[]DIRECT`[]🚀 节点选择`.*
 enable_rule_generator=true
 overwrite_original_rules=true
