--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -4,8 +4,8 @@ ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,no-resolve
 ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/cn.list
-ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/cn.list
+ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/cn.yaml
+ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/cn.yaml
 ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/steam%40cn.list
 ruleset=DIRECT,[]DOMAIN-SUFFIX,leigod.com
 ruleset=DIRECT,[]GEOSITE,private,DIRECT
