--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,15 +2,12 @@
 [custom]
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,no-resolve
-ruleset=🥵 广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/cn.yaml
-ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/cn.yaml
-ruleset=DIRECT,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/steam%40cn.list
+ruleset=DIRECT,NETWORK,udp
 ruleset=DIRECT,[]DOMAIN-SUFFIX,leigod.com
 ruleset=DIRECT,[]GEOSITE,private,DIRECT
 ruleset=DIRECT,[]GEOSITE,CN,DIRECT
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
+
 
 
 ruleset=🚀 节点选择,[]FINAL
@@ -18,7 +15,6 @@ ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🥵 广告`select`[]REJECT`[]DIRECT`[]🚀 节点选择`.*
 enable_rule_generator=true
 overwrite_original_rules=true
 
